# dnotes

./: package.json  pnpm-lock.yaml  solo.js
src/: app.css
src-tauri/: .gitignore  Cargo.toml  default-2023-08-19.log.toml  tauri.conf.json  test.sqlite
src-tauri/database/: Cargo.toml
src-tauri/database/src/: lib.rs
src-tauri/database/src/models/notes/: note.rs
src-tauri/notesmng/: Cargo.toml
src-tauri/notesmng/src/: lib.rs
src-tauri/notesmng/src/notes/: mod.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: notes.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/notes/: notes.rs
src-tauri/src/tools/: matter.rs  mod.rs
src-tauri/src/utils/: path_resolver.rs
src-tauri/utils/: Cargo.toml
src-tauri/utils/src/: lib.rs  logger.rs  path_resolver.rs
src/components/content/editor/styles/: Editor.style.ts  EditorMenu.style.ts
src/components/content/editor/ui/: Editor.ui.svelte
src/components/content/editor/ui/editor/: Editor.svelte
src/components/content/editor/ui/editor/controls/: editor.controls.ts
src/components/content/editor/ui/menu/: EditorMenu.svelte
src/components/content/styles/: Content.style.ts
src/components/content/styles/notes/: Note.style.ts
src/components/content/ui/: Content.ui.svelte
src/components/content/ui/controls/content/: content.control.ts
src/components/global/styles/: Button.style.ts  ButtonOutline.style.ts  Sidebar.style.ts
src/components/global/ui/: Sidebar.ui.svelte
src/components/layout/styles/: GridLayout.style.ts  WindowManager.style.ts
src/components/layout/ui/: GridLayout.ui.svelte  WindowManager.ui.svelte
src/components/layout/ui/controls/: window.control.ts
src/routes/: +layout.ts  +page.svelte  +page.ts
src/routes/editor/: +page.svelte
src/states/: notes.ts
src/types/: note.type.ts
src/utils/: formatter.ts
