[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.105"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.183", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-unminimize", "window-show", "window-hide", "window-minimize", "window-close", "window-unmaximize", "window-start-dragging", "window-maximize"] }
casual_logger = "0.6.5"
chrono = "0.4.26"

utils = { path = "./utils" }
#database = { path = "./database" }
notesmng = { path = "./notesmng" }
gray_matter = "0.2.6"

[workspace]
members = [
    # "database",
    "utils",
    "notesmng"
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true # tirar simbols
opt-level = "z" # otimizar o tamanho
lto = true
