[package]
name = "database"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.105"}
rusqlite = { version = "0.29.0" }
serde = { version = "1.0" }
tauri = { version = "1.4.0" }
chrono = "0.4.26"

utils = { path = "../utils" }